--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   animated_text_kit: ^4.1.0
   google_fonts: ^2.0.0
   url_launcher: ^6.0.2
+  font_awesome_flutter: ^9.0.0
 
 dev_dependencies:
   flutter_test:
